lib/intel_batchbuffer.c
@@ -877,7 +877,7 @@ igt_vme_func_t igt_get_media_vme_func(int devid)
 {
 	igt_vme_func_t fill = NULL;
 
-	if (IS_GEN9(devid) || IS_GEN10(devid) || IS_GEN11(devid))
+	if (IS_GEN11(devid))
 		fill = gen11_media_vme_func;
 
 	return fill;
